# ApisTox_dataset

./: .pre-commit-config.yaml  Makefile  README.md  analyze_dataset.py  config.py  create_dataset.py  create_dataset_splits.py  pyproject.toml  requirements.txt
dataset_creation/: ecotox.py  ppdb_and_bpdb.py  processing.py  pubchem.py  utils.py
moss_analysis_data/: moss.ids  moss.sub
other_sources/: beetox_ai_annotated_molecules.csv  beetox_ai_raw_smiles.csv  beetox_raw_data.csv  crop_csm_apis_raw_data.csv
outputs/: ecotox_cleaned_data.csv  excluded_data.csv
outputs/splits/: maxmin_test.csv  maxmin_train.csv  random_test.csv  random_train.csv
raw_data/: bpdb.csv  ecotox.csv  ppdb.csv
